Git Tests/force-app/main/default/default/objects/Order/fields/PedidoRemessa__c.field-meta.xml
<CustomField>
    <fullName>PedidoRemessa__c</fullName>
    <description>Verifica se é um pedido de remessa, conta e ordem e filho.</description>
    <formula>AND( AccountId != ClienteRecebedor__r.Id,
 PedidoFilho__c, RecordType.Name == &apos;Pedido de conta e ordem&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verifica se é um pedido de remessa, conta e ordem e filho.</inlineHelpText>
    <label>Pedido é de remessa?</label>
    <type>Checkbox</type>
</CustomField>