Git Tests/force-app/main/default/default/objects/Order/fields/PossuiItemContrato__c.field-meta.xml
<CustomField>
    <fullName>PossuiItemContrato__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possui item de contrato</label>
    <type>Checkbox</type>
</CustomField>