Git Tests/force-app/main/default/default/objects/Order/fields/PossuiPedIntegradora__c.field-meta.xml
<CustomField>
    <fullName>PossuiPedIntegradora__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possui pedido de integradora?</label>
    <type>Checkbox</type>
</CustomField>