Git Tests/force-app/main/default/default/objects/Order/fields/QuantidadeForaMalha__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeForaMalha__c</fullName>
    <label>Quantidade fora de malha</label>
    <summaryFilterItems>
        <field>OrderItem.ForaMalha__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>