Git Tests/force-app/main/default/default/objects/Order/fields/QuantidadeItens__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeItens__c</fullName>
    <label>Quantidade de itens</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>