Git Tests/force-app/main/default/default/objects/Order/fields/QuantityChangedIMG__c.field-meta.xml
<CustomField>
    <fullName>QuantityChangedIMG__c</fullName>
    <formula>IF( QuantityChangedProds__c &gt; 0,
IMAGE(&apos;/img/msg_icons/warning16.png&apos;, &apos;Quantidade alterada&apos;),
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade Alterada de Produtos</label>
    <type>Text</type>
</CustomField>