Git Tests/force-app/main/default/default/objects/Order/fields/RecallProcesso__c.field-meta.xml
<CustomField>
    <fullName>RecallProcesso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recall do processo?</label>
    <type>Checkbox</type>
</CustomField>