Git Tests/force-app/main/default/default/objects/Order/fields/RecomendacaoRespondida__c.field-meta.xml
<CustomField>
    <fullName>RecomendacaoRespondida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recomendação respondida?</label>
    <type>Checkbox</type>
</CustomField>