Git Tests/force-app/main/default/default/objects/Order/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Tipo de Registro</label>
    <type>Text</type>
</CustomField>