Git Tests/force-app/main/default/default/objects/Order/fields/RejeicaoProcesso__c.field-meta.xml
<CustomField>
    <fullName>RejeicaoProcesso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rejeição do processo?</label>
    <type>Checkbox</type>
</CustomField>