Git Tests/force-app/main/default/default/objects/Order/fields/ScoreAlvoParametro__c.field-meta.xml
<CustomField>
    <fullName>ScoreAlvoParametro__c</fullName>
    <label>Score Alvo (Parâmetro)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>