Git Tests/force-app/main/default/default/objects/Order/fields/ScoreMixParametro__c.field-meta.xml
<CustomField>
    <fullName>ScoreMixParametro__c</fullName>
    <label>Score Mix (Parâmetro)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>