Git Tests/force-app/main/default/default/objects/Order/fields/ScoreNegociacaoParametro__c.field-meta.xml
<CustomField>
    <fullName>ScoreNegociacaoParametro__c</fullName>
    <label>Score Negociação (Parâmetro)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>