Git Tests/force-app/main/default/default/objects/Order/fields/ScorePedido__c.field-meta.xml
<CustomField>
    <fullName>ScorePedido__c</fullName>
    <label>Score do pedido</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>