Git Tests/force-app/main/default/default/objects/Order/fields/SegmentoCliente__c.field-meta.xml
<CustomField>
    <fullName>SegmentoCliente__c</fullName>
    <formula>Account.SegmentoCliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segmento do Cliente</label>
    <type>Text</type>
</CustomField>