Git Tests/force-app/main/default/default/objects/Order/fields/SolicitacaoAprovada__c.field-meta.xml
<CustomField>
    <fullName>SolicitacaoAprovada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitação Aprovada</label>
    <type>Checkbox</type>
</CustomField>