Git Tests/force-app/main/default/default/objects/Order/fields/StatusCartaTroca__c.field-meta.xml
<CustomField>
    <fullName>StatusCartaTroca__c</fullName>
    <label>Status carta de troca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando envio ao ERP</fullName>
            </value>
            <value>
                <fullName>Erro de integração</fullName>
            </value>
            <value>
                <fullName>Aguardando aprovação</fullName>
            </value>
            <value>
                <fullName>Aprovada</fullName>
            </value>
            <value>
                <fullName>Reprovada</fullName>
            </value>
            <value>
                <fullName>Carta gerada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>