Git Tests/force-app/main/default/default/objects/Order/fields/StatusEntrega__c.field-meta.xml
<CustomField>
    <fullName>StatusEntrega__c</fullName>
    <label>Status de entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Link de rastreamento disponível</fullName>
            </value>
            <value>
                <fullName>Em Rota</fullName>
                <label>Em rota</label>
            </value>
            <value>
                <fullName>A caminho</fullName>
            </value>
            <value>
                <fullName>Chegou</fullName>
            </value>
            <value>
                <fullName>Entregue</fullName>
            </value>
            <value>
                <fullName>Entregue SL</fullName>
            </value>
            <value>
                <fullName>Em pausa</fullName>
            </value>
            <value>
                <fullName>Não entregue</fullName>
            </value>
            <value>
                <fullName>Abortada</fullName>
            </value>
            <value>
                <fullName>Coletado</fullName>
            </value>
            <value>
                <fullName>Não coletado</fullName>
            </value>
            <value>
                <fullName>Conferindo</fullName>
            </value>
            <value>
                <fullName>Conferido</fullName>
            </value>
            <value>
                <fullName>Sem rota</fullName>
            </value>
            <value>
                <fullName>Devolvido</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Agendado</fullName>
            </value>
            <value>
                <fullName>Com ajudante</fullName>
            </value>
            <value>
                <fullName>Transferido</fullName>
            </value>
            <value>
                <fullName>Em transferência</fullName>
            </value>
            <value>
                <fullName>Programado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>