Git Tests/force-app/main/default/default/objects/Order/fields/StatusIntegracao__c.field-meta.xml
<CustomField>
    <fullName>StatusIntegracao__c</fullName>
    <label>Status da integração</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integrado</fullName>
            </value>
            <value>
                <fullName>Não integrado</fullName>
            </value>
            <value>
                <fullName>Erro de aprovação/rejeição</fullName>
            </value>
            <value>
                <fullName>Nota fiscal cancelada</fullName>
            </value>
            <value>
                <fullName>Pedido em aberto</fullName>
            </value>
            <value>
                <fullName>Pedido bloqueado por regra</fullName>
            </value>
            <value>
                <fullName>Pedido bloqueado por crédito</fullName>
            </value>
            <value>
                <fullName>Pedido bloqueado por estoque</fullName>
            </value>
            <value>
                <fullName>Pedido bloqueado por crédito e estoque</fullName>
            </value>
            <value>
                <fullName>Pedido aguardando separação</fullName>
            </value>
            <value>
                <fullName>Pedido em separação</fullName>
            </value>
            <value>
                <fullName>Pedido separado/aguardando faturamento</fullName>
            </value>
            <value>
                <fullName>Pedido faturado</fullName>
            </value>
            <value>
                <fullName>Pedido com resíduo eliminado (sem faturamento)</fullName>
            </value>
            <value>
                <fullName>Pedido com resíduo eliminado (com faturamento)</fullName>
            </value>
            <value>
                <fullName>Pedido liberado</fullName>
            </value>
            <value>
                <fullName>Pedido bloqueado na alçada de desconto</fullName>
            </value>
            <value>
                <fullName>Pedido com SC</fullName>
            </value>
            <value>
                <fullName>Pedido aguardando saldo</fullName>
            </value>
            <value>
                <fullName>Pedido bloqueado por regra de bonificação</fullName>
            </value>
            <value>
                <fullName>Pedido cancelado</fullName>
            </value>
            <value>
                <fullName>Pedido rejeitado no Salesforce</fullName>
            </value>
            <value>
                <fullName>Pedido rejeitado na alçada financeira</fullName>
            </value>
            <value>
                <fullName>Erro integração (Envio ao Protheus)</fullName>
            </value>
            <value>
                <fullName>Erro integração (geração do pedido no Protheus)</fullName>
            </value>
            <value>
                <fullName>Pedido aguardando envio/processamento do comprovante de pagamento RA</fullName>
            </value>
            <value>
                <fullName>Pedido aguardando aprovação de pagamento RA</fullName>
            </value>
            <value>
                <fullName>Pedido rejeitado na alçada de aprovação de pagamento RA</fullName>
            </value>
            <value>
                <fullName>Aguardando processamento na integradora</fullName>
            </value>
            <value>
                <fullName>Aprovado na integradora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>