Git Tests/force-app/main/default/default/objects/Order/fields/SubmotivosCancelamento__c.field-meta.xml
<CustomField>
    <fullName>SubmotivosCancelamento__c</fullName>
    <label>Submotivo de cancelamento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MotivoCancelamento__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preço</fullName>
            </value>
            <value>
                <fullName>Prazo de entrega</fullName>
            </value>
            <value>
                <fullName>Condição de pagamento</fullName>
            </value>
            <value>
                <fullName>Qualidade do produto</fullName>
            </value>
            <value>
                <fullName>Quantidade insuficiente</fullName>
            </value>
            <value>
                <fullName>Preferiu a concorrência</fullName>
            </value>
            <value>
                <fullName>Inclusão de item</fullName>
            </value>
            <value>
                <fullName>Exclusão de item</fullName>
            </value>
            <value>
                <fullName>Erro de estoque</fullName>
            </value>
            <value>
                <fullName>Correção de preço</fullName>
            </value>
            <value>
                <fullName>Marca do produto</fullName>
            </value>
            <value>
                <fullName>Quantidade do item</fullName>
            </value>
            <value>
                <fullName>Endereço de entrega</fullName>
            </value>
            <value>
                <fullName>Tamanho diferente da nota fiscal</fullName>
            </value>
            <value>
                <fullName>Quantidade diferente da nota fiscal</fullName>
            </value>
            <value>
                <fullName>Aprovação fora do prazo</fullName>
            </value>
            <value>
                <fullName>Aprovação de cadastro</fullName>
            </value>
            <value>
                <fullName>Erro na descrição</fullName>
            </value>
            <value>
                <fullName>Devolução e troca do material</fullName>
            </value>
            <value>
                <fullName>Faturado o mesmo pedido duas vezes</fullName>
            </value>
            <value>
                <fullName>Fator de conversão e unidade de medida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>