Git Tests/force-app/main/default/default/objects/Order/fields/TermosCondicoes__c.field-meta.xml
<CustomField>
    <fullName>TermosCondicoes__c</fullName>
    <label>Termos Condicoes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>