Git Tests/force-app/main/default/default/objects/Order/fields/TipoFrete__c.field-meta.xml
<CustomField>
    <fullName>TipoFrete__c</fullName>
    <label>Tipo do frete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>CLIENTE RETIRA</fullName>
            </value>
            <value>
                <fullName>Por conta de terceiros</fullName>
            </value>
            <value>
                <fullName>Por conta remetente</fullName>
            </value>
            <value>
                <fullName>Por conta destinatário</fullName>
            </value>
            <value>
                <fullName>Sem frete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>