Git Tests/force-app/main/default/default/objects/Order/fields/TipoRegistroCliente__c.field-meta.xml
<CustomField>
    <fullName>TipoRegistroCliente__c</fullName>
    <formula>Account.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Registro do Cliente</label>
    <type>Text</type>
</CustomField>