Git Tests/force-app/main/default/default/objects/Order/fields/URLRastreio__c.field-meta.xml
<CustomField>
    <fullName>URLRastreio__c</fullName>
    <label>URL de rastreio</label>
    <type>Url</type>
</CustomField>