Git Tests/force-app/main/default/default/objects/Order/fields/ValorTotal__c.field-meta.xml
<CustomField>
    <fullName>ValorTotal__c</fullName>
    <label>Valor total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>