Git Tests/force-app/main/default/default/objects/Order/recordTypes/PedidoBonificacao.recordType-meta.xml
<RecordType>
    <fullName>PedidoBonificacao</fullName>
    <active>true</active>
    <label>Pedido de bonificação</label>
</RecordType>