Git Tests/force-app/main/default/default/objects/Order/recordTypes/PedidoContaOrdem.recordType-meta.xml
<RecordType>
    <fullName>PedidoContaOrdem</fullName>
    <active>true</active>
    <label>Pedido de conta e ordem</label>
</RecordType>