Git Tests/force-app/main/default/default/objects/Order/recordTypes/PedidoHistorico.recordType-meta.xml
<RecordType>
    <fullName>PedidoHistorico</fullName>
    <active>true</active>
    <label>Pedido histórico</label>
</RecordType>