Git Tests/force-app/main/default/default/objects/Order/recordTypes/PedidoMae.recordType-meta.xml
<RecordType>
    <fullName>PedidoMae</fullName>
    <active>true</active>
    <label>Pedido pai</label>
</RecordType>