Git Tests/force-app/main/default/default/objects/Order/recordTypes/PedidoVenda.recordType-meta.xml
<RecordType>
    <fullName>PedidoVenda</fullName>
    <active>true</active>
    <label>Pedido de venda</label>
</RecordType>