Git Tests/force-app/main/default/default/objects/Order/validationRules/Pedido_BloquearEdicaoCampos.validationRule-meta.xml
<ValidationRule>
    <fullName>Pedido_BloquearEdicaoCampos</fullName>
    <active>true</active>
    <description>Regra de validação para impedir a edição dos campos &quot;Status&quot;, &quot;Nome do cliente&quot; e &quot;Data de emissão&quot;.</description>
    <errorConditionFormula>AND(
$Profile.Name != &apos;Administrador do sistema&apos;,
RecordType.DeveloperName = &apos;PedidoHistorico&apos;,
OR(
				ISCHANGED( Status ),
				ISCHANGED( EffectiveDate ),
		 	ISCHANGED( AccountId ))
)</errorConditionFormula>
    <errorMessage>Os campos &quot;Status&quot;, &quot;Nome do cliente&quot; e &quot;Data de emissão&quot; não podem ser editados.</errorMessage>
</ValidationRule>