Git Tests/force-app/main/default/default/objects/Order/validationRules/Pedido_NaoPermitirCaracteresEspeciais.validationRule-meta.xml
<ValidationRule>
    <fullName>Pedido_NaoPermitirCaracteresEspeciais</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
AND(
 !ISBLANK(ObservacoesPedido__c),
 !REGEX(ObservacoesPedido__c, &quot;[a-zA-Z0-9\\s]+&quot;)),
AND(
 !ISBLANK(MensagemNF__c),
 !REGEX(MensagemNF__c, &quot;[a-zA-Z0-9\\s]+&quot;))
)</errorConditionFormula>
    <errorMessage>Não é permitido caracteres especiais.</errorMessage>
</ValidationRule>