Git Tests/force-app/main/default/default/objects/Order/listViews/myOrders.listView-meta.xml
<ListView>
    <fullName>myOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>OPPORTUNITY.NumeroOrcamento__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Mine</filterScope>
    <label>Meus Pedidos</label>
</ListView>